fix: advantages slider fix on mobile

--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -305,9 +305,10 @@ $x-small: 420px;
     &__slider {
       &-item {
         padding: 16px;
+        min-width: unset;
         width: 260px;
         height: 280px;
-        box-shadow: unset;
+        // box-shadow: unset;
       }
     }
   }
